migrate changes from old repo with ICS and HttpUrlConnection