@@ -29,21 +29,17 @@
 package nl.sogeti.android.gpstracker.streaming;
 
 import java.io.IOException;
-import java.net.URI;
-import java.net.URISyntaxException;
+import java.net.HttpURLConnection;
+import java.net.URL;
 import java.util.LinkedList;
 import java.util.Queue;
 
+import nl.sogeti.android.gpstracker.BuildConfig;
 import nl.sogeti.android.gpstracker.R;
 import nl.sogeti.android.gpstracker.util.Constants;
 import nl.sogeti.android.gpstracker.viewer.ApplicationPreferenceActivity;
 
-import org.apache.ogt.http.HttpResponse;
-import org.apache.ogt.http.StatusLine;
-import org.apache.ogt.http.client.ClientProtocolException;
-import org.apache.ogt.http.client.HttpClient;
-import org.apache.ogt.http.client.methods.HttpGet;
-import org.apache.ogt.http.impl.client.DefaultHttpClient;
+import org.apache.http.client.ClientProtocolException;
 
 import android.app.Notification;
 import android.app.NotificationManager;
@@ -60,28 +56,33 @@ import android.util.Log;
 
 public class CustomUpload extends BroadcastReceiver
 {
+   private static final boolean DEBUG = BuildConfig.DEBUG && false;
    private static final String CUSTOMUPLOAD_BACKLOG_DEFAULT = "20";
    private static CustomUpload sCustomUpload = null;
    private static final String TAG = "OGT.CustomUpload";
    private static final int NOTIFICATION_ID = R.string.customupload_failed;
-   private static Queue<HttpGet> sRequestBacklog =  new LinkedList<HttpGet>();
-   
+   private static Queue<URL> sRequestBacklog = new LinkedList<URL>();
+
    public static synchronized void initStreaming(Context ctx)
    {
-      if( sCustomUpload != null )
+      if (DEBUG)
+         Log.d(TAG, "initStreaming(Context)");
+      if (sCustomUpload != null)
       {
          shutdownStreaming(ctx);
       }
       sCustomUpload = new CustomUpload();
-      sRequestBacklog =  new LinkedList<HttpGet>();
+      sRequestBacklog = new LinkedList<URL>();
 
-      IntentFilter filter = new IntentFilter(Constants.STREAMBROADCAST);   
+      IntentFilter filter = new IntentFilter(Constants.STREAMBROADCAST);
       ctx.registerReceiver(sCustomUpload, filter);
    }
 
    public static synchronized void shutdownStreaming(Context ctx)
    {
-      if( sCustomUpload != null )
+      if (DEBUG)
+         Log.d(TAG, "shutdownStreaming(Context)");
+      if (sCustomUpload != null)
       {
          ctx.unregisterReceiver(sCustomUpload);
          sCustomUpload.onShutdown();
@@ -89,62 +90,61 @@ public class CustomUpload extends BroadcastReceiver
       }
    }
 
-   
    private void onShutdown()
    {
+      if (DEBUG)
+         Log.d(TAG, "onShutdown()");
    }
-   
+
    @Override
    public void onReceive(Context context, Intent intent)
    {
+      if (DEBUG)
+         Log.d(TAG, "onReceive(Context, Intent)");
       SharedPreferences preferences = PreferenceManager.getDefaultSharedPreferences(context);
       String prefUrl = preferences.getString(ApplicationPreferenceActivity.CUSTOMUPLOAD_URL, "http://www.example.com");
-      Integer prefBacklog = Integer.valueOf( preferences.getString(ApplicationPreferenceActivity.CUSTOMUPLOAD_BACKLOG, CUSTOMUPLOAD_BACKLOG_DEFAULT) );
+      Integer prefBacklog = Integer.valueOf(preferences.getString(ApplicationPreferenceActivity.CUSTOMUPLOAD_BACKLOG, CUSTOMUPLOAD_BACKLOG_DEFAULT));
       Location loc = intent.getParcelableExtra(Constants.EXTRA_LOCATION);
-      Uri trackUri =  intent.getParcelableExtra(Constants.EXTRA_TRACK);
+      Uri trackUri = intent.getParcelableExtra(Constants.EXTRA_TRACK);
       String buildUrl = prefUrl;
-      buildUrl = buildUrl.replace("@LAT@",   Double.toString(loc.getLatitude()));
-      buildUrl = buildUrl.replace("@LON@",   Double.toString(loc.getLongitude()));
-      buildUrl = buildUrl.replace("@ID@",    trackUri.getLastPathSegment());
-      buildUrl = buildUrl.replace("@TIME@",  Long.toString(loc.getTime()));
+      buildUrl = buildUrl.replace("@LAT@", Double.toString(loc.getLatitude()));
+      buildUrl = buildUrl.replace("@LON@", Double.toString(loc.getLongitude()));
+      buildUrl = buildUrl.replace("@ID@", trackUri.getLastPathSegment());
+      buildUrl = buildUrl.replace("@TIME@", Long.toString(loc.getTime()));
       buildUrl = buildUrl.replace("@SPEED@", Float.toString(loc.getSpeed()));
-      buildUrl = buildUrl.replace("@ACC@",   Float.toString(loc.getAccuracy()));
-      buildUrl = buildUrl.replace("@ALT@",   Double.toString(loc.getAltitude()));
-      buildUrl = buildUrl.replace("@BEAR@",  Float.toString(loc.getBearing()));
-      
-      HttpClient client = new DefaultHttpClient();
-      URI uploadUri;
+      buildUrl = buildUrl.replace("@ACC@", Float.toString(loc.getAccuracy()));
+      buildUrl = buildUrl.replace("@ALT@", Double.toString(loc.getAltitude()));
+      buildUrl = buildUrl.replace("@BEAR@", Float.toString(loc.getBearing()));
+
+      URL uploadUri;
       try
       {
-         uploadUri = new URI(buildUrl);
-         if (uploadUri.getHost() != null && ("http".equals(uploadUri.getScheme()) || "https".equals(uploadUri.getScheme())))
+         uploadUri = new URL(buildUrl);
+         if (uploadUri.getHost() != null && ("http".equals(uploadUri.getProtocol()) || "https".equals(uploadUri.getProtocol())))
          {
-            HttpGet currentRequest = new HttpGet(uploadUri);
-            sRequestBacklog.add(currentRequest);
+            sRequestBacklog.add(uploadUri);
          }
          else
          {
             Log.e(TAG, "URL does not have correct scheme or host " + uploadUri);
          }
-         if( sRequestBacklog.size() > prefBacklog )
+         if (sRequestBacklog.size() > prefBacklog)
          {
             sRequestBacklog.poll();
          }
-         while( !sRequestBacklog.isEmpty() )
+         while (!sRequestBacklog.isEmpty())
          {
-            HttpGet request = sRequestBacklog.peek();
-            HttpResponse response = client.execute(request);
+            URL request = sRequestBacklog.peek();
+            HttpURLConnection connection = (HttpURLConnection) request.openConnection();
             sRequestBacklog.poll();
-            StatusLine status = response.getStatusLine();
-            if (status.getStatusCode() != 200) {
-                throw new IOException("Invalid response from server: " + status.toString());
+            connection.connect();
+            int status = connection.getResponseCode();
+            if (status != 200)
+            {
+               throw new IOException("Invalid response from server: " + status);
             }
             clearNotification(context);
          }
-      }
-      catch (URISyntaxException e)
-      {
-         notifyError(context, e);
       }
       catch (ClientProtocolException e)
       {
@@ -155,18 +155,18 @@ public class CustomUpload extends BroadcastReceiver
          notifyError(context, e);
       }
    }
-   
+
    private void notifyError(Context context, Exception e)
-   {      
-      Log.e( TAG, "Custom upload failed", e);
+   {
+      Log.e(TAG, "Custom upload failed", e);
       String ns = Context.NOTIFICATION_SERVICE;
       NotificationManager mNotificationManager = (NotificationManager) context.getSystemService(ns);
-      
+
       int icon = R.drawable.ic_maps_indicator_current_position;
       CharSequence tickerText = context.getText(R.string.customupload_failed);
       long when = System.currentTimeMillis();
       Notification notification = new Notification(icon, tickerText, when);
-      
+
       Context appContext = context.getApplicationContext();
       CharSequence contentTitle = tickerText;
       CharSequence contentText = e.getMessage();
@@ -177,12 +177,12 @@ public class CustomUpload extends BroadcastReceiver
 
       mNotificationManager.notify(NOTIFICATION_ID, notification);
    }
-   
+
    private void clearNotification(Context context)
    {
       String ns = Context.NOTIFICATION_SERVICE;
       NotificationManager mNotificationManager = (NotificationManager) context.getSystemService(ns);
       mNotificationManager.cancel(NOTIFICATION_ID);
    }
-   
+
 }
